[project]
name = "mcp-search-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "trafilatura>=2.1.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
